--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_DA.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_DE.tar.gz filter=lfs diff=lfs merge=lfs -text
