--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 EN_DA.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_DE.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_E*.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_F*.tar.gz filter=lfs diff=lfs merge=lfs -text
