--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,4 @@ EN_DE.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_E*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_F*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_HU.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_IT.tar.gz filter=lfs diff=lfs merge=lfs -text
