--- a/.gitattributes
+++ b/.gitattributes
@@ -5,3 +5,4 @@ EN_E*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_F*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_HU.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_IT.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_L*.tar.gz filter=lfs diff=lfs merge=lfs -text
