--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,4 @@ EN_F*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_HU.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_IT.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_L*.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_NL.tar.gz filter=lfs diff=lfs merge=lfs -text
