--- a/.gitattributes
+++ b/.gitattributes
@@ -7,3 +7,4 @@ EN_HU.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_IT.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_L*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_NL.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_PL.tar.gz filter=lfs diff=lfs merge=lfs -text
