--- a/.gitattributes
+++ b/.gitattributes
@@ -9,3 +9,4 @@ EN_L*.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_NL.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_PL.tar.gz filter=lfs diff=lfs merge=lfs -text
 EN_PT.tar.gz filter=lfs diff=lfs merge=lfs -text
+EN_RO.tar.gz filter=lfs diff=lfs merge=lfs -text
